[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"

[[bin]]
name="day01"
path="day01/main.rs"

[[bin]]
name="day02"
path="day02/main.rs"

[[bin]]
name="day03"
path="day03/main.rs"

[[bin]]
name="day04"
path="day04/main.rs"

[[bin]]
name="day05"
path="day05/main.rs"

[[bin]]
name="day06"
path="day06/main.rs"

[[bin]]
name="day07"
path="day07/main.rs"
