[package]
name = "day03"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bin]]
name = "day03"
path = "src/bin/day03.rs"

[[bench]]
name = "bench"
harness = false
