[package]
name = "day04"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bin]]
name = "day04"
path = "src/bin/day04.rs"

[[bench]]
name = "bench"
harness = false
