[package]
name = "day11"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bin]]
name = "day11"
path = "src/bin/day11.rs"

[[bench]]
name = "bench"
harness = false
